--- a/style.css
+++ b/style.css
@@ -176,3 +176,12 @@ footer {
   font-size: 14px;
 }
 
+/*media queris */
+@media (min-width: 700px) {
+  :root{
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+.light {
+  --bg-url: url(./assests/bg-desktop-light.jpg);
+}
+}
