--- a/style.css
+++ b/style.css
@@ -36,7 +36,9 @@ body {
     */
 /* background:color image repeat position/size */
   background:var(--bg-url) no-repeat top center/cover;
+  height: 100vh;
 }
+
 
 body * {
   font-family: 'Inter', sans-serif;
